Set width for company logo in index.html
Added width attribute to the logo image.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
     <div class="login-container">
         <!-- Replace logo.png with your company logo -->
-        <img src="logo.png" alt="Company Logo">
+        <img src="logo.png" alt="Company Logo" width="120">
         <h2>Login</h2>
         <form>
             <input type="text" placeholder="Username" required><br>
